fix text format
git-svn-id: http://10.1.8.14:18080/svn/Local_Business/DAT-Event/Club-Event@3811 5e73b0b3-88fa-41e2-a44a-e6aac4854029